k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripkit
  namespace: tripkit
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: tripkit.bapttf.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: tripkit-frontend, port: {number: 80}}
  tls:
    - hosts: [tripkit.bapttf.com]
      secretName: tripkit-tls
